Fixed Overlapping arrow and numbers in analytics overview page

--- a/apinf_packages/dashboard/client/dashboard.less
+++ b/apinf_packages/dashboard/client/dashboard.less
@@ -97,7 +97,7 @@
 }
 
 .request-number {
-  width: 2.5em;
+  width: 5.2em;
 }
 
 .response-time {
